--- a/bgc/templates/bgc/b_games.html
+++ b/bgc/templates/bgc/b_games.html
@@ -12,5 +12,5 @@
             <li> No games have been added yet.</li>
         {% endfor %}
     </ul>
-
+ <a href = "{% url 'bgc:new_b_game' %}"> Add a new game</a>
 {% endblock content %}
