--- a/bgc/templates/bgc/base.html
+++ b/bgc/templates/bgc/base.html
@@ -1,6 +1,11 @@
 <p>
     <a href="{% url 'bgc:index' %}">Board game Club </a> -
-    <a href="{% url 'bgc:b_games'%}">Boardgames</a>
+    <a href="{% url 'bgc:b_games'%}">Boardgames</a> -
+    {% if user.is_authenticated %}
+      Hello, {{ user.username }}.
+    {% else %}
+      <a href="{% url 'users:login' %}">Log in</a>
+    {% endif %}
 </p>
 
 {% block content %}{% endblock content %}
