--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,19 +1,21 @@
-{% extends "bgc/base.html" %}
+{% extends 'bgc/base.html' %} <!--Takes the base html template and all below is just adding new stuff-->
+{% load bootstrap4 %}
+
+{% block page_header %}
+  <h2>Log in to your account.</h2>
+{% endblock page_header %}
 
 {% block content %}
 
-    {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-    {% endif %}
-
-    <form method="post" action="{% url 'users:login' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-
-        <button name="submit">Log in</button>
-        <input type="hidden" name="next"
-            value="{% url 'bgc:index' %}" />
-    </form>
-
+  <form method="post" action="{% url 'users:login' %}" class="form">
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    {% buttons %}
+      <button name="submit" class="btn btn-primary">Log in</button>
+    {% endbuttons %}
+    
+    <input type="hidden" name="next" 
+      value="{% url 'bgc:index' %}" />
+  </form>
+    
 {% endblock content %}
-
